fix image on mobile

--- a/src/components/imageComparison/ImageComparison.css
+++ b/src/components/imageComparison/ImageComparison.css
@@ -21,6 +21,11 @@
   list-style: disc;
   padding-left: 1.5rem;
 }
+.comparison-after-wrapper,
+.comparison-divider,
+.comparison-slider {
+  will-change: clip-path, left;
+}
 
 .comparison-wrapper h2 {
   font-size: 2rem;
